# last-legend-dob

./: Cargo.toml  README.md
lib/: Cargo.toml
lib/src/: error.rs  io_tricks.rs  lib.rs  simple_task.rs  sqpath.rs  tricks.rs  uwu_colors.rs  xor.rs
lib/src/data/: dat.rs  index2.rs  index_header.rs  mod.rs  pack_header.rs  repo.rs
lib/src/ffmpeg/: mod.rs
lib/src/surpass/: collection.rs  mod.rs  page.rs  serde_row.rs  sheet_info.rs
lib/src/surpass/known_rows/: bgm.rs  mod.rs  orchestrion.rs  orchestrion_path.rs
lib/src/transformers/: change_format.rs  loop_file.rs  loop_flac.rs  loop_ogg.rs  mod.rs  scd_tf.rs  scd_to_flac.rs  scd_to_ogg.rs
src/: main.rs  uwu_colors.rs
src/command/: extract.rs  extract_all.rs  extract_common.rs  extract_music.rs  global_args.rs  mod.rs
