[workspace]
members = ["lib"]

[package]
name = "last-legend-dob-tool"
version = "0.1.0"
authors = ["Octavia Togami <octavia.togami@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"

[[bin]]
name = "lldob"
path = "src/main.rs"

[profile.release]
incremental = true
lto = "thin"

[dependencies]
owo-colors = "3.5.0"
supports-color = "2.1.0"
log = "0.4.20"
env_logger = "0.10.0"
rayon = "1.8.0"
last-legend-dob = { path = "./lib" }

[dependencies.clap]
version = "4.4.6"
features = ["derive"]

[dependencies.strum]
version = "0.25.0"
features = ["derive"]
