[workspace]
members = ["lib"]

[package]
name = "last-legend-dob-tool"
version = "0.1.0"
authors = ["Octavia Togami <octavia.togami@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"

[[bin]]
name = "lldob"
path = "src/main.rs"

[profile.release]
incremental = true
lto = "thin"

[dependencies]
owo-colors = "4.0.0"
supports-color = "3.0.0"
log = "0.4.22"
env_logger = "0.11.3"
rayon = "1.10.0"
last-legend-dob = { path = "./lib" }

[dependencies.clap]
version = "4.5.8"
features = ["derive"]

[dependencies.strum]
version = "0.26.3"
features = ["derive"]
