[workspace]
members = ["lib"]

[package]
name = "last-legend-dob-tool"
version = "0.1.0"
authors = ["Octavia Togami <octavia.togami@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"

[[bin]]
name = "lldob"
path = "src/main.rs"

[profile.release]
debug = true

[dependencies]
owo-colors = "4.2.2"
log = "0.4.27"
env_logger = "0.11.8"
rayon = "1.10.0"
last-legend-dob = { path = "./lib" }

[dependencies.clap]
version = "4.5.43"
features = ["derive"]

[dependencies.strum]
version = "0.27.2"
features = ["derive"]
