[package]
name = "last-legend-dob"
version = "0.1.0"
authors = ["Octavia Togami <octavia.togami@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
thiserror = "1.0.49"
binrw = "0.12.0"
bitvec = "1.0.1"
chrono = "0.4.31"
crc = "3.0.1"
flate2 = "1.0.27"
auto_enums = "0.8.2"
tempfile = "3.8.0"
log = "0.4.20"
unicase = "2.7.0"
owo-colors = "3.5.0"
supports-color = "2.1.0"
parking_lot = "0.12.1"

[dependencies.strum]
version = "0.25.0"
features = ["derive"]

[dependencies.serde]
version = "1.0.188"
features = ["derive"]
