[package]
name = "last-legend-dob"
version = "0.1.0"
authors = ["Octavia Togami <octavia.togami@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
thiserror = "1.0.61"
binrw = "0.14.0"
bitvec = "1.0.1"
chrono = "0.4.38"
crc = "3.2.1"
flate2 = "1.0.30"
auto_enums = "0.8.5"
tempfile = "3.10.1"
log = "0.4.22"
unicase = "2.7.0"
owo-colors = "4.0.0"
supports-color = "3.0.0"
parking_lot = "0.12.3"

[dependencies.strum]
version = "0.26.3"
features = ["derive"]

[dependencies.serde]
version = "1.0.203"
features = ["derive"]
