[package]
name = "last-legend-dob"
version = "0.1.0"
authors = ["Octavia Togami <octavia.togami@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
thiserror = "2.0.12"
binrw = "0.15.0"
bitvec = "1.0.1"
chrono = "0.4.41"
crc = "3.3.0"
flate2 = "1.1.2"
auto_enums = "0.8.7"
tempfile = "3.20.0"
log = "0.4.27"
unicase = "2.8.1"
owo-colors = "4.2.2"
supports-color = "3.0.2"
parking_lot = "0.12.4"

[dependencies.strum]
version = "0.27.2"
features = ["derive"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]
